5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3995/executions/1592_1802.log
== TEST (2019-03-27 00:51:16) 
-- CODE:
from math import*
d1=int(input("1º dado:"))
d2=int(input("2º dado:"))
dano=int{(5*d1)**1/2+pi**d2/3}
print(dano)
-- ERROR:
File "XXXX", line 4
    dano=int{(5*d1)**1/2+pi**d2/3}
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 00:51:42) 
-- CODE:
from math import*
d1=int(input("1º dado:"))
d2=int(input("2º dado:"))
dano=int(5*d1)**1/2+(pi**d2/3)
print(dano)
-- OUTPUT:
501.0471975511966
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 00:52:02) 
-- CODE:
d1=int(input("1º dado:"))
d2=int(input("2º dado:"))
from math import*
dano=int(5*d1)**1/2+(pi**d2/3)
print(dano)
-- OUTPUT:
501.0471975511966
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 00:52:49) 
-- CODE:
d1=int(input("1º dado:"))
d2=int(input("2º dado:"))
from math import*
var1=int(5*d1)**1/2
var2=(pi**d2/3)
dano=var1+var2
print(dano)
-- OUTPUT:
501.0471975511966
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 15:41:28) 
-- CODE:
d1=int(input("1º dado:"))
d2=int(input("2º dado:"))
from math import*
var1=int(5*d1)**1/2
var2=(pi**d2/3)
dano=var1+var2
print(dano)
-- OUTPUT:
501.0471975511966
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 15:41:51) 
-- CODE:
d1=int(input("1 dado:"))
d2=int(input("2 dado:"))
from math import*
var1=int(5*d1)**1/2
var2=(pi**d2/3)
dano=var1+var2
print(dano)
-- OUTPUT:
501.0471975511966
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 15:44:15) 
-- CODE:
pv=input("pontos de vida iniciais")
d1=int(input("1 dado:"))
d2=int(input("2 dado:"))
from math import*
var1=int(5*d1)**1/2
var2=(pi**d2/3)
dano=var1+var2
print(pv-dano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(pv-dano)
TypeError: unsupported operand type(s) for -: 'str' and 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 15:45:03) 
-- CODE:
pv=input("pontos de vida iniciais")
d1=int(input("1 dado:"))
d2=int(input("2 dado:"))
from math import*
var1=int(5*d1)**1/2
var2=(pi**d2/3)
dano=var1+var2
var3=pv-dano
print(var3)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    var3=pv-dano
TypeError: unsupported operand type(s) for -: 'str' and 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 15:45:39) 
-- CODE:
pv=input("pontos de vida iniciais")
d1=int(input("1 dado:"))
d2=int(input("2 dado:"))
from math import*
var1=int(5*d1)**1/2
var2=(pi**d2/3)
dano=var1+var2
var3=float(pv-dano)
print(var3)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    var3=float(pv-dano)
TypeError: unsupported operand type(s) for -: 'str' and 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 15:46:28) 
-- CODE:
pv=input("pontos de vida iniciais")
d1=(input("1 dado:"))
d2=(input("2 dado:"))
from math import*
var1=int(5*d1)**1/2
var2=(pi**d2/3)
dano=var1+var2
var3=int(pv-dano)
print(var3)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    var2=(pi**d2/3)
TypeError: unsupported operand type(s) for ** or pow(): 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 15:46:46) 
-- CODE:
pv=input("pontos de vida iniciais")
d1=(input("1 dado:"))
d2=(input("2 dado:"))
from math import*
var1=int(5*d1)**1/2
var2=int(pi**d2/3)
dano=var1+var2
var3=int(pv-dano)
print(var3)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    var2=int(pi**d2/3)
TypeError: unsupported operand type(s) for ** or pow(): 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 15:47:28) 
-- CODE:
pv=input("pontos de vida iniciais")
d1=(input("1 dado:"))
d2=(input("2 dado:"))
from math import*
var1=int(5*d1)**1/2
from math import*
var2=int(pi**d2/3)
dano=var1+var2
var3=int(pv-dano)
print(var3)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    var2=int(pi**d2/3)
TypeError: unsupported operand type(s) for ** or pow(): 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 15:48:19) 
-- CODE:
pv=input("pontos de vida iniciais")
d1=(input("1 dado:"))
d2=(input("2 dado:"))
from math import*
var1=int(5*d1)**1/2
var2=int(pi**d2/3)
dano=var1+var2
var3=int(pv-dano)
print(var3)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    var2=int(pi**d2/3)
TypeError: unsupported operand type(s) for ** or pow(): 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 15:48:59) 
-- CODE:
pv=input("pontos de vida iniciais")
d1=(input("1 dado:"))
d2=(input("2 dado:"))
from math import*
var1=int(5*d1)**1/2
from math import*
var2=int(pi**d2/3)
from math import*
dano=var1+var2
var3=int(pv-dano)
print(var3)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    var2=int(pi**d2/3)
TypeError: unsupported operand type(s) for ** or pow(): 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 15:49:15) 
-- CODE:
pv=input("pontos de vida iniciais")
d1=(input("1 dado:"))
d2=(input("2 dado:"))
from math import*
var1=int(5*d1)**1/2
from math import*
var2=int(pi**d2/3)
dano=var1+var2
var3=int(pv-dano)
print(var3)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    var2=int(pi**d2/3)
TypeError: unsupported operand type(s) for ** or pow(): 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 15:49:45) 
-- CODE:
pv=input("pontos de vida iniciais")
d1=(input("1 dado:"))
d2=(input("2 dado:"))
from math import*
var1=int(5*d1)**1/2
from math import*
var2=float(pi**d2/3)
dano=var1+var2
var3=int(pv-dano)
print(var3)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    var2=float(pi**d2/3)
TypeError: unsupported operand type(s) for ** or pow(): 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 15:50:03) 
-- CODE:
pv=input("pontos de vida iniciais")
d1=(input("1 dado:"))
d2=(input("2 dado:"))
from math import*
var1=int(5*d1)**1/2
from math import*
var2="pi**d2/3"
dano=var1+var2
var3=int(pv-dano)
print(var3)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    dano=var1+var2
TypeError: unsupported operand type(s) for +: 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 15:50:17) 
-- CODE:
pv=input("pontos de vida iniciais")
d1=(input("1 dado:"))
d2=(input("2 dado:"))
from math import*
var1=int(5*d1)**1/2
from math import*
var2="pi**d2/3"
dano="var1+var2"
var3=int(pv-dano)
print(var3)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    var3=int(pv-dano)
TypeError: unsupported operand type(s) for -: 'str' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 15:50:31) 
-- CODE:
pv=input("pontos de vida iniciais")
d1=(input("1 dado:"))
d2=(input("2 dado:"))
from math import*
var1=int(5*d1)**1/2
from math import*
var2="pi**d2/3"
dano="var1+var2"
var3=int("pv-dano")
print(var3)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    var3=int("pv-dano")
ValueError: invalid literal for int() with base 10: 'pv-dano'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 15:50:47) 
-- CODE:
pv=input("pontos de vida iniciais")
d1=(input("1 dado:"))
d2=(input("2 dado:"))
from math import*
var1=int(5*d1)**1/2
from math import*
var2="pi**d2/3"
dano="var1+var2"
var3=(pv-dano)
print(var3)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    var3=(pv-dano)
TypeError: unsupported operand type(s) for -: 'str' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 15:50:57) 
-- CODE:
pv=input("pontos de vida iniciais")
d1=(input("1 dado:"))
d2=(input("2 dado:"))
from math import*
var1=int(5*d1)**1/2
from math import*
var2="pi**d2/3"
dano="var1+var2"
var3=(pv-dano)
print(int(var3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    var3=(pv-dano)
TypeError: unsupported operand type(s) for -: 'str' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 15:51:53) 
-- CODE:
pv=input("pontos de vida iniciais")
d1=(input("1 dado:"))
d2=(input("2 dado:"))
from math import*
var1=int(5*d1)**1/2
from math import*
var2=(pi**d2/3)
dano=(var1+var2)
var3=(pv-dano)
print(int(var3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    var2=(pi**d2/3)
TypeError: unsupported operand type(s) for ** or pow(): 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 15:54:02) 
-- CODE:
pv=input("pontos de vida iniciais")
d1=(input("1 dado:"))
d2=(input("2 dado:"))
from math import*
var1=int(5*d1)**1/2
var2=(pi)**(d2/3)
dano=(var1+var2)
var3=(pv-dano)
print(int(var3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    var2=(pi)**(d2/3)
TypeError: unsupported operand type(s) for /: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 15:55:13) 
-- CODE:
pv=input("pontos de vida iniciais")
d1=(input("1 dado:"))
d2=(input("2 dado:"))
from math import*
var1=int(5*d1)**1/2
from math import*
var2=(pi)**(d2/3)
dano=(var1+var2)
var3=(pv-dano)
print(int(var3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    var2=(pi)**(d2/3)
TypeError: unsupported operand type(s) for /: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 15:56:30) 
-- CODE:
pv=input("pontos de vida iniciais")
d1=(input("1 dado:"))
d2=(input("2 dado:"))
from math import*
var1=int(5*d1)**1/2
var2=(pi)**d2*1/3
dano=(var1+var2)
var3=(pv-dano)
print(int(var3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    var2=(pi)**d2*1/3
TypeError: unsupported operand type(s) for ** or pow(): 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 15:57:10) 
-- CODE:
pv=input("pontos de vida iniciais")
d1=(input("1 dado:"))
d2=(input("2 dado:"))
from math import*
var1=int(5*d1)**1/2
var2=int((pi)**d2*1/3)
dano=(var1+var2)
var3=(pv-dano)
print(int(var3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    var2=int((pi)**d2*1/3)
TypeError: unsupported operand type(s) for ** or pow(): 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 15:57:23) 
-- CODE:
pv=input("pontos de vida iniciais")
d1=(input("1 dado:"))
d2=(input("2 dado:"))
from math import*
var1=int(5*d1)**1/2
var2=float((pi)**d2*1/3)
dano=(var1+var2)
var3=(pv-dano)
print(int(var3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    var2=float((pi)**d2*1/3)
TypeError: unsupported operand type(s) for ** or pow(): 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 16:14:48) 
-- CODE:
var1=input("pontos de vida: ")
d1=input(" dado 1 :")
d2=input("dado2 :")
from math import*
dano=int[(5*d1)**1/2+pi**d2/3]
print=(var1-dano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    dano=int[(5*d1)**1/2+pi**d2/3]
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 16:15:00) 
-- CODE:
var1=input("pontos de vida: ")
d1=input(" dado 1 :")
d2=input("dado2 :")
from math import*
dano=int[(5*d1)**1/2 + pi**d2/3]
print=(var1-dano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    dano=int[(5*d1)**1/2 + pi**d2/3]
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 16:15:33) 
-- CODE:
var1=input("pontos de vida: ")
d1=input(" dado 1 :")
d2=input("dado2 :")
from math import*
dano=int{[(5*d1)**1/2+pi**d2/3]}
print=(var1-dano)
-- ERROR:
File "XXXX", line 5
    dano=int{[(5*d1)**1/2+pi**d2/3]}
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 16:15:43) 
-- CODE:
var1=input("pontos de vida: ")
d1=input(" dado 1 :")
d2=input("dado2 :")
from math import*
dano=int[(5*d1)**1/2+pi**d2/3]
print=(var1-dano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    dano=int[(5*d1)**1/2+pi**d2/3]
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 17:45:43) 
-- CODE:
var1=input("pontos de vida: ")
d1=input(" dado 1 :")
d2=input("dado2 :")
from math import*
dano=int[(5*d1)**1/2+pi**d2/3]
print=(var1-dano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    dano=int[(5*d1)**1/2+pi**d2/3]
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 17:46:11) 
-- CODE:
var1=input("pontos de vida: ")
d1=input(" dado 1 :")
d2=input("dado2 :")
from math import*
dano=int((5*d1)**1/2+pi**d2/3)
print=(var1-dano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    dano=int((5*d1)**1/2+pi**d2/3)
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 17:48:12) 
-- CODE:
var1=input("pontos de vida: ")
d1=input(" dado 1 :")
d2=input("dado2 :")
from math import*
var2=int((5*d1)**1/2
var3=pi**d2/3)
dano=var2+var3
print=(var1-dano)
-- ERROR:
File "XXXX", line 6
    var3=pi**d2/3)
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 17:48:18) 
-- CODE:
var1=input("pontos de vida: ")
d1=input(" dado 1 :")
d2=input("dado2 :")
from math import*
var2=int((5*d1)**1/2
var3=pi**d2/3
dano=var2+var3
print=(var1-dano)
-- ERROR:
File "XXXX", line 6
    var3=pi**d2/3
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 17:48:40) 
-- CODE:
var1=input("pontos de vida: ")
d1=input(" dado 1 :")
d2=input("dado2 :")
from math import*
var2=int(5*d1)**1/2
var3=int(pi**d2/3)
dano=var2+var3
print=(var1-dano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    var3=int(pi**d2/3)
TypeError: unsupported operand type(s) for ** or pow(): 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 17:49:51) 
-- CODE:
var1=input("pontos de vida: ")
d1=input(" dado 1 :")
d2=input("dado2 :")
from math import*
var2=int(5*d1)**1/2
var3=int(pi**d2/3)
dano=var2+var3
print=(var1-dano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    var3=int(pi**d2/3)
TypeError: unsupported operand type(s) for ** or pow(): 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 17:51:18) 
-- CODE:
var1=input("pontos de vida: ")
d1=input(" dado 1 :")
d2=input("dado2 :")
from math import*
var2=int(5*d1)**1/2
from math import*
var3=int(pi**d2/3)
dano=var2+var3
print=(var1-dano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    var3=int(pi**d2/3)
TypeError: unsupported operand type(s) for ** or pow(): 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 17:51:38) 
-- CODE:
var1=input("pontos de vida: ")
d1=input(" dado 1 :")
d2=input("dado2 :")
from math import*
var2=int(5*d1)**1/2
from math import*
var3=str(pi**d2/3)
dano=var2+var3
print=(var1-dano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    var3=str(pi**d2/3)
TypeError: unsupported operand type(s) for ** or pow(): 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 17:54:50) 
-- CODE:
var1=input("pontos de vida: ")
d1=input("dado 1 :")
d2=input("dado2 :")
from math import*
var2=(5*d1)**(1/3)
print(var2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    var2=(5*d1)**(1/3)
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 17:55:03) 
-- CODE:
var1=input("pontos de vida: ")
d1=input("dado 1 :")
d2=input("dado2 :")
from math import*
var2=int(5*d1)**(1/3)
print(var2)
-- OUTPUT:
22.31435728771881
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 17:56:30) 
-- CODE:
var1=input("pontos de vida: ")
d1=input("dado 1 :")
d2=input("dado2 :")
from math import*
var2=int(((5*d1)**(1/3))+pi**(d2/3))
print(var2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    var2=int(((5*d1)**(1/3))+pi**(d2/3))
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 17:58:47) 
-- CODE:
var1=input("pontos de vida: ")
d1=input("dado 1 :")
d2=input("dado2 :")
from math import*
var2=int(((5*d1)**(1/3))+"pi"**(d2/3))
print(var2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    var2=int(((5*d1)**(1/3))+"pi"**(d2/3))
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 17:59:41) 
-- CODE:
var1=input("pontos de vida: ")
d1=input("dado 1 :")
d2=input("dado2 :")
from math import*
var2=int(((5*d1)**(1/3))
var3=var2+pi**(d2/3))
print(var3)
-- ERROR:
File "XXXX", line 6
    var3=var2+pi**(d2/3))
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 17:59:56) 
-- CODE:
var1=input("pontos de vida: ")
d1=input("dado 1 :")
d2=input("dado2 :")
from math import*
var2=int(((5*d1)**(1/3))
var3=pi**(d2/3))
print(var3)
-- ERROR:
File "XXXX", line 6
    var3=pi**(d2/3))
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 18:00:10) 
-- CODE:
var1=input("pontos de vida: ")
d1=input("dado 1 :")
d2=input("dado2 :")
from math import*
var2=int(((5*d1)**(1/3))
var3=pi**(d2/3)+var2
print(var3)
-- ERROR:
File "XXXX", line 6
    var3=pi**(d2/3)+var2
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 18:00:15) 
-- CODE:
var1=input("pontos de vida: ")
d1=input("dado 1 :")
d2=input("dado2 :")
from math import*
var2=int(((5*d1)**(1/3))
var3=pi**(d2/3)
print(var3)
-- ERROR:
File "XXXX", line 6
    var3=pi**(d2/3)
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 18:00:45) 
-- CODE:
var1=input("pontos de vida: ")
d1=input("dado 1 :")
d2=input("dado2 :")
from math import*
var2=int(((5*d1)**(1/3))
from math import*
var3=int(pi**(d2/3))
print(var3)
-- ERROR:
File "XXXX", line 6
    from math import*
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 18:00:55) 
-- CODE:
var1=input("pontos de vida: ")
d1=input("dado 1 :")
d2=input("dado2 :")
from math import*
var2=int(((5*d1)**(1/3))
var3=int(pi**(d2/3))
print(var3)
-- ERROR:
File "XXXX", line 6
    var3=int(pi**(d2/3))
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 18:01:09) 
-- CODE:
var1=input("pontos de vida: ")
d1=input("dado 1 :")
d2=input("dado2 :")
from math import*
var2=int(((5*d1)**(1/3))
var3=int(pi**d2/3)
print(var3)
-- ERROR:
File "XXXX", line 6
    var3=int(pi**d2/3)
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 18:01:51) 
-- CODE:
var1=input("pontos de vida: ")
d1=input("dado 1 :")
d2=input("dado2 :")
from math import*
var2=int(((5*d1)**(1/3))
var3=int((pi)**(d/3))
print(var3)
-- ERROR:
File "XXXX", line 6
    var3=int((pi)**(d/3))
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 18:02:27) 
-- CODE:
var1=input("pontos de vida: ")
d1=input("dado 1 :")
d2=input("dado2 :")
from math import*
var2=int(((5*d1)**(1/3))
var3=int((pi)**(d*1/3))
print(var3)
-- ERROR:
File "XXXX", line 6
    var3=int((pi)**(d*1/3))
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 18:02:52) 
-- CODE:
var1=input("pontos de vida: ")
d1=input("dado 1 :")
d2=input("dado2 :")
from math import*
var2=int(((5*d1)**(1/3))
var3=pi
print(var3)
-- ERROR:
File "XXXX", line 6
    var3=pi
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 18:03:05) 
-- CODE:
var1=input("pontos de vida: ")
d1=input("dado 1 :")
d2=input("dado2 :")
from math import*
var2=int(((5*d1)**(1/3))
print(var3)
-- ERROR:
File "XXXX", line 6
    print(var3)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 18:03:14) 
-- CODE:
var1=input("pontos de vida: ")
d1=input("dado 1 :")
d2=input("dado2 :")
from math import*
var2=int(((5*d1)**(1/3))
print(var2)
-- ERROR:
File "XXXX", line 6
    print(var2)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 18:03:22) 
-- CODE:
var1=input("pontos de vida: ")
d1=input("dado 1 :")
d2=input("dado2 :")
from math import*
var2=int(((5*d1)**(1/3))
print(var2)
-- ERROR:
File "XXXX", line 6
    print(var2)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 18:03:38) 
-- CODE:
var1=input("pontos de vida: ")
d1=input("dado 1 :")
d2=input("dado2 :")
from math import*
var2=int(((5*d1)**(1/3))
print(int(var2))
-- ERROR:
File "XXXX", line 6
    print(int(var2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 18:05:04) 
-- CODE:
var1=input("pontos de vida: ")
d1=input("dado 1 :")
d2=input("dado2 :")
from math import*
var2=int(((5*d1)**(1/3))
var3=int(("pi")**(d/3))
print(var3)
-- ERROR:
File "XXXX", line 6
    var3=int(("pi")**(d/3))
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 18:07:55) 
-- CODE:
var1=input("pontos de vida: ")
d1=input("dado 1 :")
d2=input("dado2 :")
from math import*
var2=int(((5*d1)**(1/3))
from mat import*
var3=pi
var4=var3**d2/3
dano=var2+var4
print(var1-dano)
-- ERROR:
File "XXXX", line 6
    from mat import*
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 18:09:08) 
-- CODE:
var1=input("pontos de vida: ")
d1=input("dado 1 :")
d2=input("dado2 :")
from math import*
var2=int(((5*d1)**(1/3))

			var3=pi
var4=var3**d2/3
dano=var2+var4
print(var1-dano)
-- ERROR:
File "XXXX", line 7
    var3=pi
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 18:20:15) 
-- CODE:
var1=input("pontos de vida: ")
d1=input("dado 1 :")
d2=input("dado2 :")
from math import* 
a=(5*d1)**1/2
b=pi**d2/3
c=a+b
print(int(var1-c))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    a=(5*d1)**1/2
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 18:21:00) 
-- CODE:
var1=input("pontos de vida: ")
d1=input("dado 1 :")
d2=input("dado2 :")
a=(5*d1)**1/2
from math import* 
b=pi**d2/3
c=a+b
print(int(var1-c))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    a=(5*d1)**1/2
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 18:21:22) 
-- CODE:
var1=input("pontos de vida: ")
d1=input("dado 1 :")
d2=input("dado2 :")
a=int((5*d1)**1/2)
from math import* 
b=pi**d2/3
c=a+b
print(int(var1-c))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    a=int((5*d1)**1/2)
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 20:30:52) 
-- CODE:
var1=input("pontos de vida: ")
d1=input("dado 1 :")
d2=input("dado2 :")
a=int((5*d1)**1/2)
from math import* 
b=pi**d2/3
c=a+b
print(int(var1-c))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    a=int((5*d1)**1/2)
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 20:31:24) 
-- CODE:
var1=input("pontos de vida: ")
d1=input("dado 1 :")
d2=input("dado2 :")
a=((5*d1)**1/2)
from math import* 
b=pi**d2/3
c=a+b
print(int(var1-c))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    a=((5*d1)**1/2)
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 20:35:39) 
-- CODE:
var1=input("pontos de vida: ")
d1=input("dado 1 :")
d2=input("dado2 :")
from math import*
a=int((5*d1)**1/2)
from math import* 
b=pi**d2/3
c=a+b
print(int(var1-c))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    a=int((5*d1)**1/2)
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 20:39:05) 
-- CODE:
var1=input("pontos de vida: ")
d1=input("dado 1 :")
d2=input("dado2 :")
a=int((5**1/2)*(d1**1/2))
from math import* 
b=pi**d2/3
c=a+b
print(int(var1-c))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    a=int((5**1/2)*(d1**1/2))
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 20:39:25) 
-- CODE:
var1=input("pontos de vida: ")
d1=input("dado 1 :")
d2=input("dado2 :")
a=float((5**1/2)*(d1**1/2))
from math import* 
b=pi**d2/3
c=a+b
print(int(var1-c))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    a=float((5**1/2)*(d1**1/2))
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 20:39:37) 
-- CODE:
var1=input("pontos de vida: ")
d1=input("dado 1 :")
d2=input("dado2 :")
a=((5**1/2)*(d1**1/2))
from math import* 
b=pi**d2/3
c=a+b
print(int(var1-c))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    a=((5**1/2)*(d1**1/2))
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 20:41:23) 
-- CODE:
var1=input("pontos de vida: ")
d1=input("dado1:")
d2=input("dado2:")
from math import*
a=((5**1/2)*(d1**1/2))
from math import* 
b=pi**d2/3
c=a+b
print(int(var1-c))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    a=((5**1/2)*(d1**1/2))
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 20:41:37) 
-- CODE:
var1=input("pontos de vida: ")
d1=input("dado1:")
d2=input("dado2:")
from math import* 
b=pi**d2/3
c=a+b
print(int(var1-c))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    b=pi**d2/3
TypeError: unsupported operand type(s) for ** or pow(): 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 20:46:21) 
-- CODE:
var1=input("pontos de vida: ")
d1=input("dado1:")
d2=input("dado2:")
a=int((5*d1)**0.5)
from math import* 
b=pi**d2/3
c=b
print(int(var1-c))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    a=int((5*d1)**0.5)
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 20:48:00) 
-- CODE:
var1=input("pontos de vida: ")
d1=input("dado1:")
d2=input("dado2:")
from math import*
a=sqrt(5*d1)
b=pi**d2/3
c=a+b
print(int(var1-c))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    a=sqrt(5*d1)
TypeError: must be real number, not str
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 20:48:28) 
-- CODE:
var1=input("pontos de vida: ")
d1=input("dado1:")
d2=input("dado2:")
from math import*
a=sqrt(int(5*d1))
b=pi**d2/3
c=a+b
print(int(var1-c))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    b=pi**d2/3
TypeError: unsupported operand type(s) for ** or pow(): 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 20:50:00) 
-- CODE:
var1=input("pontos de vida: ")
d1=input("dado1:")
d2=input("dado2:")
from math import*
a=sqrt(int(5*d1))
b=pi**(d2*3**1)
c=a+b
print(int(var1-c))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    b=pi**(d2*3**1)
TypeError: unsupported operand type(s) for ** or pow(): 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 20:51:02) 
-- CODE:
var1=input("pontos de vida: ")
d1=input("dado1:")
d2=input("dado2:")
from math import*
a=sqrt(int(5*d1))
b=(pi**d2)**1/3
c=a+b
print(int(var1-c))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    b=(pi**d2)**1/3
TypeError: unsupported operand type(s) for ** or pow(): 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 20:52:04) 
-- CODE:
var1=input("pontos de vida: ")
d1=input("dado1:")
d2=input("dado2:")
from math import*
a=sqrt(int(5*d1))
b=exp(int(pi**d2/3))
c=a+b
print(int(var1-c))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    b=exp(int(pi**d2/3))
TypeError: unsupported operand type(s) for ** or pow(): 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 20:52:24) 
-- CODE:
var1=input("pontos de vida: ")
d1=input("dado1:")
d2=input("dado2:")
from math import*
a=sqrt(int(5*d1))
from math import*
b=exp(int(pi**d2/3))
c=a+b
print(int(var1-c))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    b=exp(int(pi**d2/3))
TypeError: unsupported operand type(s) for ** or pow(): 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 20:56:44) 
-- CODE:
var1=input("pontos de vida: ")
d1=input("dado1:")
d2=input("dado2:")
from math import*
a=sqrt(int(5*d1))
from math import*
b=sqrt(int(pi**d2/3)**2)
c=a+b
print(int(var1-c))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    b=sqrt(int(pi**d2/3)**2)
TypeError: unsupported operand type(s) for ** or pow(): 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 21:06:01) 
-- CODE:
var1=input("pontos de vida: ")
d1=input("dado1:")
d2=input("dado2:")
from math import*
a=((sqrt(int(5*d1)))+pi**d2/3)
print(int(var1-a))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    a=((sqrt(int(5*d1)))+pi**d2/3)
TypeError: unsupported operand type(s) for ** or pow(): 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 21:11:28) 
-- CODE:
var1=input("pontos de vida: ")
d1=input("dado1:")
d2=input("dado2:")
from math import*
a=sqrt(int(5*d1))
b=pi**d2
print(int(var1-a))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    b=pi**d2
TypeError: unsupported operand type(s) for ** or pow(): 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 21:11:50) 
-- CODE:
var1=input("pontos de vida: ")
d1=input("dado1:")
d2=input("dado2:")
from math import*
a=sqrt(int(5*d1))
b=int(pi**d2)
print(int(var1-a))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    b=int(pi**d2)
TypeError: unsupported operand type(s) for ** or pow(): 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 21:12:35) 
-- CODE:
var1=input("pontos de vida: ")
d1=input("dado1:")
d2=input("dado2:")
from math import*
a=sqrt(int(5*d1))
b=string(pi**d2)
print(int(var1-a))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    b=string(pi**d2)
NameError: name 'string' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 21:13:00) 
-- CODE:
var1=input("pontos de vida: ")
d1=input("dado1:")
d2=input("dado2:")
from math import*
a=sqrt(int(5*d1))
b=sqrt(pi**d2)
print(int(var1-a))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    b=sqrt(pi**d2)
TypeError: unsupported operand type(s) for ** or pow(): 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 21:13:45) 
-- CODE:
var1=input("pontos de vida: ")
d1=input("dado1:")
d2=input("dado2:")
from math import*
a=sqrt(int(5*d1))
b=pi**(d2/3)
print(int(var1-a))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    b=pi**(d2/3)
TypeError: unsupported operand type(s) for /: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 21:15:27) 
-- CODE:
var1=input("pontos de vida: ")
d1=input("dado1:")
d2=input("dado2:")
from math import*
a=sqrt(int(5*d1))
b=float(pi**(d2/3))
print(int(var1-a))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    b=float(pi**(d2/3))
TypeError: unsupported operand type(s) for /: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 21:15:44) 
-- CODE:
var1=input("pontos de vida: ")
d1=input("dado1:")
d2=input("dado2:")
from math import*
a=sqrt(float(5*d1))
b=float(pi**(d2/3))
print(int(var1-a))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    b=float(pi**(d2/3))
TypeError: unsupported operand type(s) for /: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 21:16:00) 
-- CODE:
var1=input("pontos de vida: ")
d1=input("dado1:")
d2=input("dado2:")
from math import*
a=sqrt(float(5*d1))
b=int(pi**(d2/3))
print(int(var1-a))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    b=int(pi**(d2/3))
TypeError: unsupported operand type(s) for /: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 21:16:23) 
-- CODE:
var1=input("pontos de vida: ")
d1=input("dado1:")
d2=input("dado2:")
from math import*
a=sqrt(int(5*d1))
b=float(pi**(d2/3))
print(int(var1-a))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    b=float(pi**(d2/3))
TypeError: unsupported operand type(s) for /: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 21:16:58) 
-- CODE:
var1=input("pontos de vida: ")
d1=input("dado1:")
d2=input("dado2:")
from math import*
a=sqrt(int(5*d1))
b=float(pi**(d2/3))
print(int(var1-a))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    b=float(pi**(d2/3))
TypeError: unsupported operand type(s) for /: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 21:19:48) 
-- CODE:
var1=input("pontos de vida: ")
d1=input("dado1:")
d2=input("dado2:")
from math import*
a=sqrt(int(5*d1))
b=int(pi**(d2/3))
c=a+b
print(int(var1-c))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    b=int(pi**(d2/3))
TypeError: unsupported operand type(s) for /: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 21:22:49) 
-- CODE:
var1=input("pontos de vida: ")
d1=input("dado1:")
d2=input("dado2:")
from math import*
a=sqrt(int(5*d1))
b=pi**(int(d2/3))
c=a+b
print(int(var1-c))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    b=pi**(int(d2/3))
TypeError: unsupported operand type(s) for /: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 21:23:05) 
-- CODE:
var1=input("pontos de vida: ")
d1=input("dado1:")
d2=input("dado2:")
from math import*
a=sqrt(int(5*d1))
b=pi**(int("d2"/3))
c=a+b
print(int(var1-c))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    b=pi**(int("d2"/3))
TypeError: unsupported operand type(s) for /: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 21:25:07) 
-- CODE:
var1=input("pontos de vida: ")
d1=input("dado1:")
d2=input("dado2:")
from math import*
a=sqrt(int(5*d1))
b=pi**d2/3
c=a+b
print(int(var1-c))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    b=pi**d2/3
TypeError: unsupported operand type(s) for ** or pow(): 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 22:27:05) 
-- CODE:
import math
var1=int(input("pontos de vida: "))
d1=int(input("dado1:"))
d2=int(input("dado2:"))
a=sqrt((5*d1)**(1/2))+(math.pi**(d2/3))
resto=var1-int(a)
print(resto)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    a=sqrt((5*d1)**(1/2))+(math.pi**(d2/3))
NameError: name 'sqrt' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 22:27:33) 
-- CODE:
import math
var1=int(input("pontos de vida: "))
d1=int(input("dado1:"))
d2=int(input("dado2:"))
a=sqrt((5*d1)**(0.5))+(math.pi**(d2/3))
resto=var1-int(a)
print(resto)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    a=sqrt((5*d1)**(0.5))+(math.pi**(d2/3))
NameError: name 'sqrt' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 22:28:32) 
-- CODE:
import math
var1=int(input("pontos de vida: "))
d1=int(input("dado1:"))
d2=int(input("dado2:"))
a=((5*d1)**(0.5))+(math.pi**(d2/3))
resto=var1-int(a)
print(resto)
-- OUTPUT:
188
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 22:29:14) 
-- CODE:
import math
var1=int(input("pontos de vida: "))
d1=int(input("dado1:"))
d2=int(input("dado2:"))
a=((5*d1)**(0.5))+(math.pi**(d2/3))
resto=var1-int(a)
print(resto)
-- EXECUTION TIME:
0.177217
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
188
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
285
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 21:05:29) 
-- CODE:
import math
var1=int(input("pontos de vida: "))
d1=int(input("dado1:"))
d2=int(input("dado2:"))
a=((5*d1)**(0.5))+(pi**(d2/3))
resto=var1-int(a)
print(resto)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    a=((5*d1)**(0.5))+(pi**(d2/3))
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 21:05:53) 
-- CODE:
import math
var1=int(input("pontos de vida: "))
d1=int(input("dado1:"))
d2=int(input("dado2:"))
a=((5*d1)**(0.5))+(math.pi**(d2/3))
resto=var1-int(a)
print(resto)
-- OUTPUT:
188
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 21:06:05) 
-- CODE:
import math
var1=int(input("pontos de vida: "))
d1=int(input("dado1:"))
d2=int(input("dado2:"))
a=((5*d1)**(0.5))+(math.pi**(d2/3))
resto=var1-int(a)
print(resto)
-- EXECUTION TIME:
0.164362
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
188
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
285
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 21:27:05) 
-- CODE:
import math
var1=int(input("pontos de vida: "))
d1=int(input("dado1:"))
d2=int(input("dado2:"))
a=((5*d1)**(0.5)+(math.pi**(d2/3))
resto=var1-int(a)
print(resto)
-- ERROR:
File "XXXX", line 6
    resto=var1-int(a)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 21:27:54) 
-- CODE:
import math
var1=int(input("pontos de vida: "))
d1=int(input("dado1:"))
d2=int(input("dado2:"))
a=((5*d1)**(0.5))+(math.pi**(d2/3))
resto=var1-int(a)
print(resto)
-- OUTPUT:
188
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 21:33:24) 
-- CODE:
import math
var1=int(input("pontos de vida: "))
d1=int(input("dado1:"))
d2=int(input("dado2:"))
a=((5*d1)**(0.5))+(math.pi**(d2/3))
resto=var1-int(a)
print(resto)
-- OUTPUT:
188
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 21:33:34) 
-- CODE:
import math
var1=int(input("pontos de vida: "))
d1=int(input("dado1:"))
d2=int(input("dado2:"))
a=((5*d1)**(0.5))+(math.pi**(d2/3))
resto=var1-int(a)
print(resto)
-- EXECUTION TIME:
0.224862
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
188
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
285
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
